Unidentifiable pages marked with tab title and page title

--- a/DrugRegimen/static/about/patientabout.html
+++ b/DrugRegimen/static/about/patientabout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Patient About</title>
     <style>
         #title {
             padding-left: 35px;
@@ -103,6 +103,7 @@
         </nav>
     </header>
     <main>
+        <h2>Patient About</h2>
         <p>
             &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
             It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
