--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>About</title>
+    <title>Conflicts</title>
     <style>
         #title {
             padding-left: 35px;
@@ -174,7 +174,7 @@ tr:nth-child(even) {
 
 <body>
     <header>
-        <h2 id="title">Search Medication Conflicts</h2>
+        <h2 id="title">Drug Regimen</h2>
         <nav class="navbar">
             <a href='http://127.0.0.1:8000/home' class="left-nav">Back</a>
             <div class="dropdown">
@@ -187,7 +187,7 @@ tr:nth-child(even) {
         </nav>
     </header>
     <main>
-
+        <h2>Search Medication Conflicts</h2>
         <div class="topnav">
             <a>Enter medications:</a>
             <div class="search-container">
@@ -205,7 +205,7 @@ tr:nth-child(even) {
           </div>
           
           <div style="padding-left:16px">
-            <h2>Results</h2>
+            <h3>Results ..</h3>
           </div>
           <table>
             <tr>
