--- a/DrugRegimen/static/home/doctorhome.html
+++ b/DrugRegimen/static/home/doctorhome.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Doctor Home</title>
     <style>
         #title {
             padding-left: 35px;
@@ -197,6 +197,7 @@
         </nav>
     </header>
     <main>
+        <h2>Doctor Home</h2>
         {% for item in patientsAndDrugs %}
         <div class="patient-summary">
             <div class="patient-details">
