--- a/DrugRegimen/static/home/patienthome.html
+++ b/DrugRegimen/static/home/patienthome.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Patient Home</title>
     <style>
         #title {
             padding-left: 35px;
@@ -154,6 +154,7 @@
         </nav>
     </header>
     <main>
+        <h2>Patient Home</h2>
         {% for medication in medications %}
         <div class="prescription-summary">
             <div class="prescription-details">
