--- a/DrugRegimen/static/home/pharmacisthome.html
+++ b/DrugRegimen/static/home/pharmacisthome.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Pharmacy Home</title>
     <style>
         #title {
             padding-left: 35px;
@@ -163,6 +163,7 @@
         </nav>
     </header>
     <main>
+        <h2>Pharmacy Home</h2>
         {% for patient in patients %}
         <div class="patient-summary">
             <div class="patient-details">
