--- a/DrugRegimen/static/manage-patients/manage-patients.html
+++ b/DrugRegimen/static/manage-patients/manage-patients.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Manage Patients</title>
     <style>
         #title {
             padding-left: 35px;
@@ -105,6 +105,7 @@
         </nav>
     </header>
     <main>
+        <h2>Manage Patients</h2>
         <div>
         <h2>Add Patient</h2>
             <form action="/add-patient" method="post">
