--- a/DrugRegimen/static/account/doctoraccount.html
+++ b/DrugRegimen/static/account/doctoraccount.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Doctor Account</title>
     <style>
         #title {
             padding-left: 35px;
@@ -88,7 +88,7 @@
 
 <body>
     <header>
-        <h2 id="title">Drug Regimen</h2>
+        <h2 id="title">Doctor Account</h2>
         <nav class="navbar">
             <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
             <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
