--- a/DrugRegimen/static/account/pharmacistaccount.html
+++ b/DrugRegimen/static/account/pharmacistaccount.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Pharmacy account</title>
     <style>
         #title {
             padding-left: 35px;
@@ -103,7 +103,7 @@
         </nav>
     </header>
     <main>
-
+        <h2>Pharmacy account</h2>
     </main>
     <footer class="footer">
         <p>Copyright &copy; Team 5 2021</p>
