--- a/DrugRegimen/static/login/login.html
+++ b/DrugRegimen/static/login/login.html
@@ -3,7 +3,7 @@
 
 <html lang="en-us" >
 <head>
-<title>Drug Regimen Tracker</title>
+<title>Login</title>
 <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
 <link rel="stylesheet" type="text/css" href="/static/admin/css/login.css">
 
