--- a/DrugRegimen/static/home/pharmacisthome.html
+++ b/DrugRegimen/static/home/pharmacisthome.html
@@ -163,10 +163,11 @@
         </nav>
     </header>
     <main>
-        {% for patient in patients %}
+        <h2>Not dispensed:</h2>
+        {% for prescription in notDispensed %}
         <div class="patient-summary">
             <div class="patient-details">
-                <a href='#' class="patient-details" id="patient-name">John Smith</a>
+                <a href='#' class="patient-details" id="patient-name">{{ prescription.0.patientId }}</a>
             </div>
             <div class="patient-details" id="who-can-collect">
                 <ul>
@@ -177,11 +178,35 @@
             </div>
             <div id="prescription-medications" class="patient-details">
                 <ul>
-                    <li>Pyrazinamide 20mg</li>
-                    <li>Nurofen 10mg</li>
+                    {% for item in prescription.1 %}
+                    <li>{{ item.quantity }} {{ item.dosageForm }} {{ item.drug }} {{ item.doseValue }} {{ item.doseUnit }}</li>
+                    {% endfor %}
                 </ul>
+                <a href="mark-dispensed/{{ prescription.2 }}"><button>Mark Dispensed</button></a>
             </div>
         </div>
+        {% endfor %}
+        <h2>Dispensed (Not Collected):</h2>
+        {% for prescription in dispensedNotReceived %}
+        <div class="patient-summary">
+            <div class="patient-details">
+                <a href='#' class="patient-details" id="patient-name">{{ prescription.0.patientId }}</a>
+            </div>
+            <div class="patient-details" id="who-can-collect">
+                <ul>
+                    <li>Sarah Smith</li>
+                    <li>Tim Smith</li>
+                    <li>Bill Smith</li>
+                </ul>
+            </div>
+            <div id="prescription-medications" class="patient-details">
+                <ul>
+                    {% for item in prescription.1 %}
+                    <li>{{ item.quantity }} {{ item.dosageForm }} {{ item.drug }} {{ item.doseValue }} {{ item.doseUnit }}</li>
+                    {% endfor %}
+                </ul>
+                <a href="mark-received/{{ prescription.2 }}"><button>Mark Received</button></a>
+            </div>
         {% endfor %}
     </main>
     <footer class="footer">
