Allow Pharmacists to generate QRCodes for each item in a prescripton

--- a/DrugRegimen/static/home/doctorhome.html
+++ b/DrugRegimen/static/home/doctorhome.html
@@ -219,7 +219,7 @@
                 <label for="require1"> Require videos</label>
             </div>
             <video class="video-player" width="22%" height="240" controls>
-                <source src="recorded-videos/{{ item.1.videoURL }}_{{ date }}.webm" type="video/webm">
+                <source src="media/recorded-videos/{{ item.1.videoURL }}_{{ date }}.webm" type="video/webm">
                 Your browser does not support the video tag.
             </video>
 
