--- a/DrugRegimen/static/about/doctorabout.html
+++ b/DrugRegimen/static/about/doctorabout.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Doctor About</title>
+    <link rel="stylesheet" href="../admin/css/subnav.css">
     <style>
         #title {
             padding-left: 35px;
@@ -33,7 +34,9 @@
         .left-nav {
             float: left;
         }
-
+        #subnav {
+            font: monospace
+        }
         .dropdown {
             float: right;
             overflow: hidden;
@@ -105,6 +108,10 @@
         </nav>
     </header>
     <main>
+        <div id="subnav">
+            <h3>Doctor About</h2>
+        </div>
+        
         <p>
             &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
             It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
