--- a/DrugRegimen/static/about/pharmacistabout.html
+++ b/DrugRegimen/static/about/pharmacistabout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pharmacist About</title>
+    <link rel="stylesheet" href="../admin/css/subnav.css">
     <style>
         #title {
             padding-left: 35px;
@@ -103,7 +104,9 @@
         </nav>
     </header>
     <main>
-        <h2>Pharmacist About</h2>
+        <div id="subnav">
+            <h3>Pharmacist About</h2>
+        </div>
         <p>
             &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
             It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
