--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Conflicts</title>
+    <link rel="stylesheet" href="../admin/css/subnav.css">
     <style>
         #title {
             padding-left: 35px;
@@ -187,7 +188,9 @@ tr:nth-child(even) {
         </nav>
     </header>
     <main>
-        <h2>Search Medication Conflicts</h2>
+        <div id="subnav">
+          <h3>Search Medication Conflicts</h2>
+        </div>
         <div class="topnav">
             <a>Enter medications:</a>
             <div class="search-container">
