--- a/DrugRegimen/static/home/doctorhome.html
+++ b/DrugRegimen/static/home/doctorhome.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor Home</title>
+    <link rel="stylesheet" href="../admin/css/subnav.css">
     <style>
         #title {
             padding-left: 35px;
@@ -197,7 +198,9 @@
         </nav>
     </header>
     <main>
-        <h2>Doctor Home</h2>
+        <div id="subnav">
+            <h3>Doctor Help</h2>
+        </div>
         {% for item in patientsAndDrugs %}
         <div class="patient-summary">
             <div class="patient-details">
