--- a/DrugRegimen/static/recordvideo/recordvideo.html
+++ b/DrugRegimen/static/recordvideo/recordvideo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Account</title>
+    <link rel="stylesheet" href="../admin/css/subnav.css">
     <style>
         #title {
             padding-left: 35px;
@@ -122,7 +123,9 @@
         </nav>
     </header>
     <main>
-        <h2>Record Video</h2>
+        <div id="subnav">
+            <h3>Record Video</h2>
+        </div>
         <p>Click the "Start" button to begin video recording for a few seconds. You can stop
           the video by clicking the creatively-named "Stop" button. The "Download"
           button will download the received data (although it's in a raw, unwrapped form
