--- a/DrugRegimen/static/manage-patients/manage-patients.html
+++ b/DrugRegimen/static/manage-patients/manage-patients.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Patients</title>
+    <link rel="stylesheet" href="../admin/css/subnav.css">
     <style>
         #title {
             padding-left: 35px;
@@ -105,7 +106,9 @@
         </nav>
     </header>
     <main>
-        <h2>Manage Patients</h2>
+        <div id="subnav">
+            <h3>Manage Patients</h2>
+        </div>
         <div>
         <h2>Add Patient</h2>
             <form action="/add-patient" method="post">
