--- a/DrugRegimen/static/prescribe-medication/prescribe.html
+++ b/DrugRegimen/static/prescribe-medication/prescribe.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prescribe Medication</title>
+    <link rel="stylesheet" href="../admin/css/subnav.css">
     <style>
         #title {
             padding-left: 35px;
@@ -106,7 +107,9 @@
     </header>
     <main>
         <div>
-        <h2>Prescribe Medication</h2>
+            <div id="subnav">
+                <h3>Prescribe Medication</h2>
+            </div>
             <form action="/write-prescription" method="post">
                 {% csrf_token %}
                 <label for="patient">Choose Patient: </label>
