--- a/DrugRegimen/static/about/patientabout.html
+++ b/DrugRegimen/static/about/patientabout.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient About</title>
-    <link rel="stylesheet" href="../admin/css/subnav.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'admin/css/subnav.css' %}">
     <style>
         #title {
             padding-left: 35px;
