--- a/DrugRegimen/static/manage-patients/manage-patients.html
+++ b/DrugRegimen/static/manage-patients/manage-patients.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Patients</title>
-    <link rel="stylesheet" href="../admin/css/subnav.css">
+    <link rel="stylesheet" href="{% static 'admin/css/subnav.css' %}">
     <style>
         #title {
             padding-left: 35px;
