--- a/DrugRegimen/static/help/doctorhelp.html
+++ b/DrugRegimen/static/help/doctorhelp.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor Help</title>
+    {% load static %}
     <link rel="stylesheet" href="{% static 'admin/css/subnav.css' %}">
     <style>
         #title {
