Sample styling to prescription form

--- a/DrugRegimen/static/prescribe-medication/prescribe.html
+++ b/DrugRegimen/static/prescribe-medication/prescribe.html
@@ -85,6 +85,46 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+        input[type=text], select {
+          width: 100%;
+          padding: 12px 20px;
+          margin: 8px 0;
+          display: inline-block;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          box-sizing: border-box;
+        }
+
+        input[type=number], select {
+          width: 100%;
+          padding: 12px 20px;
+          margin: 8px 0;
+          display: inline-block;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          box-sizing: border-box;
+        }
+
+        input[type=submit] {
+          width: 100%;
+          background-color: #4CAF50;
+          color: white;
+          padding: 14px 20px;
+          margin: 8px 0;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+
+        input[type=submit]:hover {
+          background-color: #45a049;
+        }
+
+        .prescribe {
+          border-radius: 5px;
+          background-color: #f2f2f2;
+          padding: 20px;
+        }
     </style>
 </head>
 
@@ -107,10 +147,7 @@
         </nav>
     </header>
     <main>
-        <div>
-            <div id="subnav">
-                <h3>Prescribe Medication</h2>
-            </div>
+        <div class = prescribe>
             <form action="/write-prescription" method="post">
                 {% csrf_token %}
                 <label for="patient">Choose Patient: </label>
