--- a/DrugRegimen/static/prescribe-medication/prescribe.html
+++ b/DrugRegimen/static/prescribe-medication/prescribe.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prescribe Medication</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'admin/css/subnav.css' %}">
+    <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
     <style>
         #title {
             padding-left: 35px;
@@ -146,7 +146,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main><div id="pagecontent">
         <div class = prescribe>
             <form action="/write-prescription" method="post">
                 {% csrf_token %}
@@ -229,7 +229,7 @@
                 <input type="submit" value="Prescribe">
             </form>
         </div>
-    </main>
+    </div></main>
     <footer class="footer">
         <p>Copyright &copy; Team 5 2021</p>
     </footer>
