--- a/DrugRegimen/static/recordvideo/recordvideo.html
+++ b/DrugRegimen/static/recordvideo/recordvideo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Account</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'admin/css/subnav.css' %}">
+    <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
     <style>
         #title {
             padding-left: 35px;
@@ -123,7 +123,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main><div id="pagecontent">
         <div id="subnav">
             <h3>Record Video</h2>
         </div>
@@ -242,7 +242,7 @@
         stop(preview.srcObject);
       }, false);
                   </script>
-    </main>
+    </div></main>
     <footer class="footer">
         <p>Copyright &copy; Team 5 2021</p>
     </footer>
