--- a/DrugRegimen/static/about/doctorabout.html
+++ b/DrugRegimen/static/about/doctorabout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor About</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'admin/css/subnav.css' %}">
+    <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
     <style>
         #title {
             padding-left: 35px;
@@ -108,7 +108,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main><div id="pagecontent">
         <div id="subnav">
             <h3>Doctor About</h2>
         </div>
@@ -122,7 +122,7 @@
             > Set the prescription so that video uploads from the patient of their conumption of the prescription are necessary</br>
             > Review the QR scans and videos of patients</br>
         </p>
-    </main>
+    </div></main>
     <footer class="footer">
         <p>Copyright &copy; Team 5 2021</p>
     </footer>
