--- a/DrugRegimen/static/about/pharmacistabout.html
+++ b/DrugRegimen/static/about/pharmacistabout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pharmacist About</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'admin/css/subnav.css' %}">
+    <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
     <style>
         #title {
             padding-left: 35px;
@@ -105,7 +105,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main><div id="pagecontent">
         <div id="subnav">
             <h3>Pharmacist About</h2>
         </div>
@@ -117,7 +117,7 @@
             > The ability to verify digital prescriptions at the counter</br>
             > A handy means to keep track of prescriptions granted</br>
         </p>
-    </main>
+    </div></main>
     <footer class="footer">
         <p>Copyright &copy; Team 5 2021</p>
     </footer>
