--- a/DrugRegimen/static/about/patientabout.html
+++ b/DrugRegimen/static/about/patientabout.html
@@ -7,85 +7,7 @@
     <title>Patient About</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
-    <style>
-        #title {
-            padding-left: 35px;
-        }
-
-        body {
-            padding: 0px;
-            margin: 0px;
-
-        }
-
-        .navbar {
-            overflow: hidden;
-            width: 100%;
-            background-color: #006857;
-        }
-
-        .navbar a {
-            color: white;
-            text-decoration: none;
-            display: block;
-            padding: 15px 20px;
-            text-align: center;
-        }
-
-        .left-nav {
-            float: left;
-        }
-
-        .dropdown {
-            float: right;
-            overflow: hidden;
-            background-color: inherit;
-        }
-
-        .navbar a:hover {
-            background-color: #01463a;
-            color: #f4f4f4;
-        }
-
-        .footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            background: #006857;
-        }
-
-        .footer p {
-            text-align: center;
-            color: white;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: grey;
-            min-width: 96.44px;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
-
-        .dropdown-content a {
-            float: none;
-            color: white;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #01463a;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
 </head>
 
 <body>
