Syngergy logo added to page footers

--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -154,8 +154,9 @@ tr:nth-child(even) {
           </table>
     </div></main>
     <footer class="footer">
-        <p>Copyright &copy; Team 5 2021</p>
-    </footer>
+      <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
+      <div class="text">Copyright &copy; Team 5 2021</div>
+</footer>
 </body>
 
 </html>
