--- a/DrugRegimen/static/about/doctorabout.html
+++ b/DrugRegimen/static/about/doctorabout.html
@@ -44,8 +44,9 @@
         </p>
     </div></main>
     <footer class="footer">
-        <p>Copyright &copy; Team 5 2021</p>
-    </footer>
+        <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
+        <div class="text">Copyright &copy; Team 5 2021</div>
+</footer>
 </body>
 
 </html>
