--- a/DrugRegimen/static/help/patienthelp.html
+++ b/DrugRegimen/static/help/patienthelp.html
@@ -32,8 +32,9 @@
         </div>
     </div></main>
     <footer class="footer">
-        <p>Copyright &copy; Team 5 2021</p>
-    </footer>
+        <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
+        <div class="text">Copyright &copy; Team 5 2021</div>
+</footer>
 </body>
 
 </html>
