Patients can confirm or remove their assigned doctors

--- a/DrugRegimen/static/account/patientaccount.html
+++ b/DrugRegimen/static/account/patientaccount.html
@@ -29,6 +29,25 @@
     <main><div id="pagecontent">
         <div id="subnav">
             <h3>Patient Account</h2>
+            <h3>Your Doctors:</h3>
+                <ul>
+                {% for doctor in doctors %}
+                <form action="/remove-doctor" method="post">
+                    {% csrf_token %}
+                        <li>{{ doctor }} <input type="submit" name = {{ doctor }} value="Remove"></li>
+                </form>
+                {% endfor %}
+                </ul>
+            <h3>Doctors Pending Approval:</h3>
+                <ul>
+                {% for doctor in pendingDoctors %}
+                <form action="/approve-doctor" method="post">
+                    {% csrf_token %}
+                        <li>{{ doctor }}</li>
+                    <input type="submit" name = {{ doctor }} value="Approve">
+                </form>
+                {% endfor %}
+                </ul>
         </div>
     </div></main>
     <footer class="footer">
