--- a/DrugRegimen/static/recordvideo/recordvideo.html
+++ b/DrugRegimen/static/recordvideo/recordvideo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Account</title>
     {% load static %}
+    <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
     <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
     <style>
 
