--- a/DrugRegimen/static/help/patienthelp.html
+++ b/DrugRegimen/static/help/patienthelp.html
@@ -156,54 +156,46 @@
     <dl class="faq">
         <dt>
           <button aria-expanded="false" aria-controls="faq1_desc">
-            What do I do if I have a permit for an assigned lot, but can't find a space there?
+            Under my scripts, what does dispensed mean?
           </button>
         </dt>
         <dd>
           <p id="faq1_desc" class="desc">
-            Park at the nearest available parking meter without paying the meter
-            and call 999-999-9999 to report the problem. We will note and approve your alternate
-            location and will investigate the cause of the shortage in your assigned facility.
+            The dispensed feature allows the patient to check how much of their prescription has been dispensed and how much of their prescription is remaining.
           </p>
         </dd>
         <dt>
           <button aria-expanded="false" aria-controls="faq2_desc">
-            What do I do if I lose my permit or if my permit is stolen?
+            Under my scripts, what does status mean?
           </button>
         </dt>
         <dd>
           <p id="faq2_desc" class="desc">
-            You should come to the Parking office and report the
-            loss. There is a fee to replace your lost permit. However, if your permit was stolen, a
-            copy of a police report needs to be submitted along with a stolen parking permit form for
-            a fee replacement exemption.
+            The status of the script will inform the patient if their prescription is still in date (Prescriptions are valid for 6 months, however currently due to covid-19 they are valid for 9 months)<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;Status.1 - In Date <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;Status.2 – Expired
           </p>
         </dd>
         <dt>
           <button aria-expanded="false" aria-controls="faq3_desc">
-            Is there free parking on holidays?
+            What does the interaction’s checker search for?
           </button>
         </dt>
         <dd>
           <p id="faq3_desc" class="desc">
-            All facilities are restricted from 2:00 am - 6:00 am on all days. No
-            exceptions are made for any holiday or recess except those officially listed as a
-            <q>
-              Holidays
-            </q>
-            in the calendar. Please note: 24-hour rental spaces, 24-hour rental lots, and
-            disabled parking is enforced at all times.
+            The interactions checker allows the patient to search for drug, food and drink interactions with their medication.
           </p>
         </dd>
         <dt>
           <button aria-expanded="false" aria-controls="faq4_desc">
-            Do all parking facilities have the same enforcement rules?
+            How do I use the interaction’s checker?
           </button>
         </dt>
         <dd>
           <p id="faq4_desc" class="desc">
-            Some parking facility restrictions differ from others. Be sure to
-            take note of the signs at each lot entrance.
+            1. In the first search bar, type in the first drug you want to check for. <br>
+            2. If you want to search for all drug,food and drink interactions with this drug press search . <br>
+            3. If you want to search for a specific drug, food or drink interaction type this into the second search bar and press search .
           </p>
         </dd>
     </dl>
