Confidence score visible on Doctor's frontend

--- a/DrugRegimen/static/home/doctorhome.html
+++ b/DrugRegimen/static/home/doctorhome.html
@@ -137,8 +137,7 @@
             </div>
             <div id="time-last-taken" class="patient-details">
                 <ul>
-                    <li>2 hours ago</li>
-                    <li>9:30 AM</li>
+                    <li>{{ item.2 }}</li>
                 </ul>
             </div>
             <div id="require-videos" class="patient-details">
